Fixes the spacing and slignment issue in the testimonials

--- a/wp-content/themes/multunus/sass/custom/_home.scss
+++ b/wp-content/themes/multunus/sass/custom/_home.scss
@@ -470,6 +470,14 @@
 
 }
 
+.services-section .container {
+  margin-top: 50px;
+}
+
+.services-section .services {
+  margin-top: 10px;
+}
+
 .big-picture {
   .meta {
     margin-top: 100px;
@@ -492,7 +500,7 @@
   }
   .meta p {
     text-align: justify;
-    line-height: 1.9;
+    line-height: 1.8;
   }
 }
 
@@ -503,6 +511,10 @@
   .heart {
     width: 30px;
   }
+}
+
+.services-section p, .community p {
+  line-height: 1.8;
 }
 
 .slider {
@@ -613,67 +625,69 @@
   }
 }
 
-.testimonials {
-  height: 300px;
+.customer-stories {
   margin-top: 30px;
-  box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.08);
-  border-radius: 2px;
-  background-clip: padding-box;
-  .testimonial {
-    padding-top: 20px;
-    padding-left: 50px;
-    .testimonial-image {
-      max-height: 160px;
+  margin-bottom: 30px;
+  .testimonials {
+    position: relative;
+    margin-top: 30px;
+    box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.08);
+    border-radius: 2px;
+    background-clip: padding-box;
+    .carousel-prev-button, .carousel-next-button {
+      width: 50px;
+      height: 50px;
+      border: 0;
+      border-radius: 25px;
     }
-    .review-info {
-      margin-top: 30px;
-      .review {
+    .carousel-prev-button {
+      background: url('/img/carousel-left.svg');
+      background-position:center;
+      background-repeat:no-repeat;
+      position: absolute;
+      top: 50%;
+      left: -100px;
+    }
+    .carousel-next-button {
+      background: url('/img/carousel-right.svg');
+      background-position:center;
+      background-repeat:no-repeat;
+      position: absolute;
+      top: 50%;
+      right: -100px;
+    }
+    .testimonial {
+      height: 310px;
+      color: black;
+      text-align: left;
+      background-color: white;
+      .testimonial-image {
+        max-height: 160px;
+      }
+      .review-info {
+        margin-top: 30px;
+        .person-name {
+          color: #656565;
+        }
+        .button {
+          font-size: 18px;
+        }
+        .review {
+          margin: 0;
+        }
+      }
+      .read-more {
+        margin-top: 0;
+      }
+      .profile-image {
+        height: 50px;
+        width: 50px;
+        border-radius: 25px;
         margin: 0;
+        padding: 0;
       }
     }
-    .read-more {
-      margin-top: 0;
-    }
-    .profile-image {
-      height: 50px;
-      width: 50px;
-      border-radius: 25px;
-      margin: 0;
-      padding: 0;
-    }
   }
-}
-
-.slick-prev {
-  left: -100px;
-}
-
-.slick-next {
-  right: -70px;
-}
-
-.slick-prev:before {
-  background-image: url('/img/carousel-left.svg');
-  background-size: 50px 50px;
-  display: block;
-  content: "";
-  height: 50px;
-  width: 50px;
-  border-radius: 25px;
-  cursor: pointer;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
-}
-
-.slick-next:before {
-  background-image: url('/img/carousel-right.svg');
-  background-size: 50px 50px;
-  display: block;
-  content: "";
-  height: 50px;
-  width: 50px;
-  border-radius: 25px;
-  cursor: pointer;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .slick-carousel h1 {
